--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,7 @@
     "rootDir": "./",
     "baseUrl": ".",
     "paths": {
-      "*": [
-        "./src/*"
-      ]
+      "*": ["./src/*"]
     },
     "jsx": "react-jsx",
     "forceConsistentCasingInFileNames": true,
@@ -27,10 +25,7 @@
   "ts-node": {
     "swc": true
   },
-  "include": [
-    "src",
-    "medusa-config.js"
-  ],
+  "include": ["src", "medusa-config.js"],
   "exclude": [
     "**/__tests__",
     "**/__fixtures__",
